--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,30 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  lottie: ^2.4.0
+#  cloud_firestore: ^4.8.0
+  firebase_auth: ^4.6.2
+  firebase_storage: ^11.2.2
+  firebase_core: ^2.13.1
+  cached_network_image: ^3.1.0
+  image_picker: ^0.8.4+2
+  contacts_service: ^0.6.3
+  intl: ^0.18.1
+  timeago: ^3.4.0
+  fluttertoast: ^8.0.8
+  shared_preferences: ^2.1.2
+  firebase_database: ^10.0.0
+  firebase_phone_auth_handler: ^1.0.8
+  pinput: ^2.2.16
+  easy_container: ^1.0.4
+  intl_phone_field: ^3.1.0
+#  firebase_phone_auth: ^2.3.0
+  flutter_sms: ^2.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_messaging: ^14.6.3
+  flutter_local_notifications: ^14.1.1
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +77,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
+  assets:
+    - assets/Lottie/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
